--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -41,6 +41,7 @@
     "react-addons-pure-render-mixin": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-immutable-proptypes": "^1.7.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.2.4",
     "redux": "^3.4.0",
